Make sidebar responsive, collapse and simplify for mobile [FIXES 71624206]

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -47,7 +47,7 @@ $grid-gutter-width: 50px; // bump up the grid gutters
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
   margin-top: 0px; // reset the top margin for h1. not sure why this is a thing in bootstrap/normalize
 }
 
@@ -147,5 +147,39 @@ h1, h2, h3, h4, h5, h6 {
 
   &:first-of-type {
     padding-top:0px; // but not the first form field
+  }
+}
+
+/* Mobile styles */
+
+@media (max-width: $screen-sm-min) {
+  h1 {
+    font-size: 2em; // shrink the section headers
+  }
+
+  .container#content {
+    margin-top:0; // we don't need this margin anymore
+  }
+
+  #sidebar {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+
+    .status {
+      margin-top: 0; // we don't need this margin anymore
+      border: 1px solid $gray-lighter;
+      padding: 5px 15px;
+
+      li {
+        display:none; // hide all the steps
+        margin:0; // we don't need this margin anymore
+      }
+      .cur-step {
+        display:inline-block; // show the step we're on, settle them on the same line
+        font-weight: 700;
+        font-size:12px;
+        opacity: .5;
+      }
+    }
   }
 }
